handled data fetching and populating the table